[tool.poetry]
name = "PyramidStore"
version = "0.1.0"
description = ""
authors = ["UndCover"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
requests = "^2.28.1"
pycryptodome = "^3.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
